Cambio de color a los marcos Los colores de los marcos son muy agresivos a la vista Poner los colback de color negro para que tenga mejor presentacion

--- a/Tarea01/Main.tex
+++ b/Tarea01/Main.tex
@@ -46,7 +46,7 @@ includefoot]{geometry}
 
 \newcommand{\ExiEscuela}{\textbf{Facultad de Ciencias, UNAM}}
 
-\newtcolorbox{ejercicio}[1]{beamer,colback=white!90!white, colframe=blue!80!white, title=Ejercicio #1}
+\newtcolorbox{ejercicio}[1]{beamer,colback=white!90!white, colframe=black, title=Ejercicio #1}
 
 \makeatletter
 \renewcommand*\env@matrix[1][*\c@MaxMatrixCols c]{%
